tests/ui/async-await/async-borrowck-escaping-closure-error.stderr
error[E0515]: cannot return value referencing local variable `x`
  --> $DIR/async-borrowck-escaping-closure-error.rs:6:5
   |
LL |     Box::new((async || x)())
   |     ^^^^^^^^^------------^^^
   |     |        |
   |     |        `x` is borrowed here
   |     returns a value referencing data owned by the current function

error[E0515]: cannot return value referencing temporary value
  --> $DIR/async-borrowck-escaping-closure-error.rs:6:5
   |
LL |     Box::new((async || x)())
   |     ^^^^^^^^^------------^^^
   |     |        |
   |     |        temporary value created here
   |     returns a value referencing data owned by the current function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0515`.
